--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.5.1"
   },
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "reset-css": "^5.0.1",
     "slick-carousel": "^1.8.1"
   }
